--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external_include/glm"]
 	path = external_include/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "external_include/imgui"]
+	path = external_include/imgui
+	url = https://github.com/ocornut/imgui.git
