setting up the beginning of models and materials

--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -453,13 +453,13 @@
     <ClCompile Include="arbrook\core\logging\logging.cpp" />
     <ClCompile Include="arbrook\core\modules\module.cpp" />
     <ClCompile Include="arbrook\rendering\cache\buffercache.cpp" />
+    <ClCompile Include="arbrook\rendering\cache\modelcache.cpp" />
     <ClCompile Include="arbrook\rendering\cache\texturecache.cpp" />
     <ClCompile Include="arbrook\rendering\cache\shadercache.cpp" />
+    <ClCompile Include="arbrook\rendering\data\handles\modelhandle.cpp" />
     <ClCompile Include="arbrook\rendering\pipeline\base\pipeline.cpp" />
     <ClCompile Include="arbrook\rendering\pipeline\base\graphicsstage.cpp" />
     <ClCompile Include="arbrook\rendering\systems\renderer.cpp" />
-    <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp" />
-    <ClCompile Include="arbrook\rendering\modules\rendermodule.cpp" />
     <ClCompile Include="arbrook\core\scheduler\scheduler.cpp" />
     <ClCompile Include="arbrook\rendering\systems\rendertestsystem.cpp" />
     <ClCompile Include="arbrook\sandbox\systems\testsystem.cpp" />
@@ -478,6 +478,8 @@
   <ItemGroup>
     <ClInclude Include="arbrook\core\common\string_extra.hpp" />
     <ClInclude Include="arbrook\core\common\string_literal.hpp" />
+    <ClInclude Include="arbrook\core\components\components.hpp" />
+    <ClInclude Include="arbrook\core\components\transform.hpp" />
     <ClInclude Include="arbrook\core\core.hpp" />
     <ClInclude Include="arbrook\core\ecs\component_container.hpp" />
     <ClInclude Include="arbrook\core\containers\pointer.hpp" />
@@ -499,15 +501,21 @@
     <ClInclude Include="arbrook\core\engine\services\serviceregistry.hpp" />
     <ClInclude Include="arbrook\core\logging\logging.hpp" />
     <ClInclude Include="arbrook\core\math\math.hpp" />
+    <ClInclude Include="arbrook\core\modules\coremodule.hpp" />
     <ClInclude Include="arbrook\core\modules\module.hpp" />
+    <ClInclude Include="arbrook\core\systems\hierarchy\hierarchysystem.hpp" />
     <ClInclude Include="arbrook\input\input.hpp" />
     <ClInclude Include="arbrook\input\modules\inputmodule.hpp" />
     <ClInclude Include="arbrook\rendering\cache\cache.hpp" />
+    <ClInclude Include="arbrook\rendering\cache\modelcache.hpp" />
     <ClInclude Include="arbrook\rendering\components\camera.hpp" />
     <ClInclude Include="arbrook\rendering\components\mesh_renderer.hpp" />
     <ClInclude Include="arbrook\rendering\components\spriterenderer.hpp" />
     <ClInclude Include="arbrook\rendering\cache\buffercache.hpp" />
-    <ClInclude Include="arbrook\rendering\data\bufferhandle.hpp" />
+    <ClInclude Include="arbrook\rendering\data\handles\bufferhandle.hpp" />
+    <ClInclude Include="arbrook\rendering\data\handles\handles.hpp" />
+    <ClInclude Include="arbrook\rendering\data\model.hpp" />
+    <ClInclude Include="arbrook\rendering\data\handles\modelhandle.hpp" />
     <ClInclude Include="arbrook\rendering\interface\DirectX\buffer.hpp" />
     <ClInclude Include="arbrook\rendering\interface\DirectX\dx11includes.hpp" />
     <ClInclude Include="arbrook\rendering\interface\DirectX\enumtypes.hpp" />
@@ -527,9 +535,9 @@
     <ClInclude Include="arbrook\rendering\interface\OpenGL\texture.hpp" />
     <ClInclude Include="arbrook\rendering\interface\OpenGL\window.hpp" />
     <ClInclude Include="arbrook\rendering\data\renderingtest.hpp" />
-    <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp" />
+    <ClInclude Include="arbrook\rendering\data\handles\shaderhandle.hpp" />
     <ClInclude Include="arbrook\rendering\data\shadersource.hpp" />
-    <ClInclude Include="arbrook\rendering\data\texturehandle.hpp" />
+    <ClInclude Include="arbrook\rendering\data\handles\texturehandle.hpp" />
     <ClInclude Include="arbrook\rendering\interface\OpenGL\buffer.hpp" />
     <ClInclude Include="arbrook\rendering\interface\config.hpp" />
     <ClInclude Include="arbrook\rendering\interface\definitions.hpp" />
