--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -33,13 +33,7 @@
     <ClCompile Include="arbrook\core\scheduler\scheduler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="arbrook\core\events\eventbus.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="arbrook\rendering\modules\rendermodule.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="arbrook\core\modules\module.cpp">
@@ -94,6 +88,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="external_include\imgui\backends\imgui_impl_dx11.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="arbrook\rendering\data\handles\modelhandle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="arbrook\rendering\cache\modelcache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -251,10 +251,10 @@
     <ClInclude Include="arbrook\rendering\interface\DirectX\renderinterface.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\texturehandle.hpp">
+    <ClInclude Include="arbrook\rendering\data\handles\texturehandle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp">
+    <ClInclude Include="arbrook\rendering\data\handles\shaderhandle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\interface\window.hpp">
@@ -293,7 +293,7 @@
     <ClInclude Include="arbrook\rendering\cache\buffercache.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\bufferhandle.hpp">
+    <ClInclude Include="arbrook\rendering\data\handles\bufferhandle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\vertex.hpp">
@@ -408,6 +408,30 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="external_include\imgui\backends\imgui_impl_dx11.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\core\modules\coremodule.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\core\systems\hierarchy\hierarchysystem.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\core\components\transform.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\handles\modelhandle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\model.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\cache\modelcache.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\handles\handles.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\core\components\components.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
