--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "include/rsl2"]
-	path = include/rsl2
+[submodule "include/rsl"]
+	path = include/rsl
 	url = https://github.com/Rythe-Interactive/Rythe-Standard-Library.git
 [submodule "external_include/glm"]
 	path = external_include/glm
