--- a/application/sandbox/src/sandbox/sandbox.vcxproj
+++ b/application/sandbox/src/sandbox/sandbox.vcxproj
@@ -27,13 +27,13 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugOGL Win64|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
+    <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>ClangCL</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugDX11 Win64|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
+    <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>ClangCL</PlatformToolset>
   </PropertyGroup>
@@ -67,29 +67,29 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugOGL Win64|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>bin\Win64\DebugOGL\</OutDir>
-    <IntDir>obj\Win64\DebugOGL\</IntDir>
-    <TargetName>sandbox</TargetName>
+    <OutDir>$(SolutionDir)bin\build\</OutDir>
+    <IntDir>$(SolutionDir)bin\obj\Win64\DebugOGL\sandbox\</IntDir>
+    <TargetName>sandbox-d</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugDX11 Win64|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>bin\Win64\DebugDX11\</OutDir>
-    <IntDir>obj\Win64\DebugDX11\</IntDir>
-    <TargetName>sandbox</TargetName>
+    <OutDir>$(SolutionDir)bin\build\</OutDir>
+    <IntDir>$(SolutionDir)bin\obj\Win64\DebugDX11\sandbox\</IntDir>
+    <TargetName>sandbox-d</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseOGL Win64|x64'">
-    <LinkIncremental>true</LinkIncremental>
-    <OutDir>bin\Win64\ReleaseOGL\</OutDir>
-    <IntDir>obj\Win64\ReleaseOGL\</IntDir>
+    <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)bin\build\</OutDir>
+    <IntDir>$(SolutionDir)bin\obj\Win64\ReleaseOGL\sandbox\</IntDir>
     <TargetName>sandbox</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseDX11 Win64|x64'">
-    <LinkIncremental>true</LinkIncremental>
-    <OutDir>bin\Win64\ReleaseDX11\</OutDir>
-    <IntDir>obj\Win64\ReleaseDX11\</IntDir>
+    <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)bin\build\</OutDir>
+    <IntDir>$(SolutionDir)bin\obj\Win64\ReleaseDX11\sandbox\</IntDir>
     <TargetName>sandbox</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
@@ -97,56 +97,86 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>..\..\sandbox\include;..\..\sandbox\src;..\..\..\..\arbrook\core\src;..\..\..\..\arbrook\core\include;..\..\..\..\arbrook\rendering\src;..\..\..\..\arbrook\rendering\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=sandbox;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)application\sandbox\include;$(SolutionDir)application\sandbox\src;$(SolutionDir)include;$(SolutionDir)arbrook\core\src;$(SolutionDir)include\rsl\src;$(SolutionDir)arbrook\rendering\include;$(SolutionDir)arbrook\rendering\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>GL.lib;GLFW.lib;imgui.lib;bgfx.lib;bimg.lib;bx.lib;stb.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>core-d.lib;rendering-d.lib;glfw3_mt.lib;bgfx-d.lib;bimg-d.lib;bx-d.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)bin\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugDX11 Win64|x64'">
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>..\..\sandbox\include;..\..\sandbox\src;..\..\..\..\arbrook\core\src;..\..\..\..\arbrook\core\include;..\..\..\..\arbrook\rendering\src;..\..\..\..\arbrook\rendering\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=sandbox;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)application\sandbox\include;$(SolutionDir)application\sandbox\src;$(SolutionDir)include;$(SolutionDir)arbrook\core\src;$(SolutionDir)include\rsl\src;$(SolutionDir)arbrook\rendering\include;$(SolutionDir)arbrook\rendering\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>GL.lib;GLFW.lib;imgui.lib;bgfx.lib;bimg.lib;bx.lib;stb.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>core-d.lib;rendering-d.lib;glfw3_mt.lib;bgfx-d.lib;bimg-d.lib;bx-d.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)bin\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseOGL Win64|x64'">
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>..\..\sandbox\include;..\..\sandbox\src;..\..\..\..\arbrook\core\src;..\..\..\..\arbrook\core\include;..\..\..\..\arbrook\rendering\src;..\..\..\..\arbrook\rendering\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <Optimization>Disabled</Optimization>
+      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=sandbox;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)application\sandbox\include;$(SolutionDir)application\sandbox\src;$(SolutionDir)include;$(SolutionDir)arbrook\core\src;$(SolutionDir)include\rsl\src;$(SolutionDir)arbrook\rendering\include;$(SolutionDir)arbrook\rendering\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <Optimization>Full</Optimization>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <MinimalRebuild>false</MinimalRebuild>
+      <StringPooling>true</StringPooling>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>GL.lib;GLFW.lib;imgui.lib;bgfx.lib;bimg.lib;bx.lib;stb.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>glfw3_mt.lib;bgfx.lib;bimg.lib;bx.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)bin\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseDX11 Win64|x64'">
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>..\..\sandbox\include;..\..\sandbox\src;..\..\..\..\arbrook\core\src;..\..\..\..\arbrook\core\include;..\..\..\..\arbrook\rendering\src;..\..\..\..\arbrook\rendering\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <Optimization>Disabled</Optimization>
+      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=sandbox;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)application\sandbox\include;$(SolutionDir)application\sandbox\src;$(SolutionDir)include;$(SolutionDir)arbrook\core\src;$(SolutionDir)include\rsl\src;$(SolutionDir)arbrook\rendering\include;$(SolutionDir)arbrook\rendering\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <Optimization>Full</Optimization>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <MinimalRebuild>false</MinimalRebuild>
+      <StringPooling>true</StringPooling>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>GL.lib;GLFW.lib;imgui.lib;bgfx.lib;bimg.lib;bx.lib;stb.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>glfw3_mt.lib;bgfx.lib;bimg.lib;bx.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)bin\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -155,11 +185,15 @@
     <ClInclude Include="systems\testsystem.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\arbrook\Arbrook.cpp" />
     <ClCompile Include="systems\testsystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\arbrook\core\src\core\core.vcxproj">
       <Project>{4E40957C-3A77-960D-E363-7C10CF79120F}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\arbrook\rendering\src\rendering\rendering.vcxproj">
+      <Project>{03CFAD0B-6F39-6282-B877-1328242140D7}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
