moved reources, fixed the build pipeline

--- a/application/sandbox/src/sandbox/sandbox.vcxproj.filters
+++ b/application/sandbox/src/sandbox/sandbox.vcxproj.filters
@@ -18,12 +18,16 @@
     <ClInclude Include="systems\game.hpp">
       <Filter>systems</Filter>
     </ClInclude>
-    <ClInclude Include="systems\testsystem.hpp" />
+    <ClInclude Include="systems\testsystem.hpp">
+      <Filter>systems</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\arbrook\Arbrook.cpp">
       <Filter>arbrook</Filter>
     </ClCompile>
-    <ClCompile Include="systems\testsystem.cpp" />
+    <ClCompile Include="systems\testsystem.cpp">
+      <Filter>systems</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
