--- a/arbrook/core/src/core/core.vcxproj
+++ b/arbrook/core/src/core/core.vcxproj
@@ -93,7 +93,7 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=core;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=core;DEBUG;RenderingAPI_OGL=0;RenderingAPI=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)include\rsl\src;$(SolutionDir)arbrook\core\include;$(SolutionDir)arbrook\core\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
@@ -112,7 +112,7 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=core;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=core;DEBUG;RenderingAPI_DX11=1;RenderingAPI=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)include\rsl\src;$(SolutionDir)arbrook\core\include;$(SolutionDir)arbrook\core\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
@@ -131,7 +131,7 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=core;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=core;NDEBUG;RenderingAPI_OGL=0;RenderingAPI=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)include\rsl\src;$(SolutionDir)arbrook\core\include;$(SolutionDir)arbrook\core\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -154,7 +154,7 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=core;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ARBROOK_INTERNAL;PROJECT_NAME=core;NDEBUG;RenderingAPI_DX11=1;RenderingAPI=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)include\rsl\src;$(SolutionDir)arbrook\core\include;$(SolutionDir)arbrook\core\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -174,8 +174,6 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="common\string_extra.hpp" />
-    <ClInclude Include="common\string_literal.hpp" />
     <ClInclude Include="components\components.hpp" />
     <ClInclude Include="components\transform.hpp" />
     <ClInclude Include="containers\pointer.hpp" />
