reworked how input layout works on the opengl side, and added this neat property thing for components. its kinda janky right now though

--- a/arbrook/core/src/core/core.vcxproj
+++ b/arbrook/core/src/core/core.vcxproj
@@ -175,6 +175,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="components\components.hpp" />
+    <ClInclude Include="components\property.hpp" />
     <ClInclude Include="components\transform.hpp" />
     <ClInclude Include="containers\pointer.hpp" />
     <ClInclude Include="core.hpp" />
