removing project files from git, changed how data handles work. trying to get rendering working again

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,10 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+*.vcxproj
+application/sandbox/src/sandbox/sandbox.vcxproj.filters
+arbrook/core/src/core/core.vcxproj.filters
+*.filters
+*.filters
+*.vcxproj
+*.sln
