--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "include/rsl"]
-	path = include/rsl
-	url = https://github.com/Rythe-Interactive/Rythe-Standard-Library.git
 [submodule "external_include/glm"]
 	path = external_include/glm
 	url = https://github.com/g-truc/glm.git
 [submodule "external_include/imgui"]
 	path = external_include/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "include/rythe-standard-library"]
+	path = include/rythe-standard-library
+	url = https://github.com/Rythe-Interactive/Rythe-Standard-Library.git
