added assimp as a submodule, created a meshcache which will load a mesh file and put its data into a mesh object. finished the modelcache with takes meshes and created a bunch of buffer objects out of them

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "include/gainput"]
 	path = include/gainput
 	url = https://github.com/jkuhlmann/gainput.git
+[submodule "include/assimp"]
+	path = include/assimp
+	url = https://github.com/assimp/assimp.git
