moving the bgfx files to the rendering include, and fixed up actualy gui rendering. you can now select a model to render

--- a/application/sandbox/src/sandbox/imgui.ini
+++ b/application/sandbox/src/sandbox/imgui.ini
@@ -4,12 +4,37 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=31,27
-Size=419,223
+Pos=107,13
+Size=227,279
 Collapsed=0
 
 [Window][Change Model]
-Pos=64,60
-Size=367,71
+Pos=769,79
+Size=414,173
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=300,25
+Size=353,714
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=354,104
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=346,290
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=387,8
+Size=621,714
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=570,109
 Collapsed=0
 
