implemented a fly around camera

--- a/application/sandbox/src/sandbox/imgui.ini
+++ b/application/sandbox/src/sandbox/imgui.ini
@@ -9,7 +9,7 @@ Size=353,316
 Collapsed=1
 
 [Window][Change Model]
-Pos=770,79
+Pos=771,63
 Size=414,173
 Collapsed=0
 
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Set Test]
 Pos=804,433
 Size=438,191
+Collapsed=0
+
+[Window][Inspector]
+Pos=816,60
+Size=420,375
 Collapsed=0
 
